@@ -17,9 +17,16 @@ typedef uint32_t pixel_t;
 #define PIXELFORMAT AHARDWAREBUFFER_FORMAT_R8G8B8X8_UNORM
 #endif
 
-#if defined(PIXELFORMAT_ARGB8888)
+inline void v_get_argb(pixel_t c, uint8_t &a, uint8_t &r, uint8_t &g, uint8_t &b) {
+  a = (c & 0xff000000) >> 24;
+  r = (c & 0xff0000) >> 16;
+  g = (c & 0xff00) >> 8;
+  b = (c & 0xff);
+}
 
-#define GET_ARGB_PX(a, r, g, b) (a << 24 | (r << 16) | (g << 8) | (b))
+#define v_get_argb_px(a, r, g, b) (a << 24 | (r << 16) | (g << 8) | (b))
+
+#if defined(PIXELFORMAT_ARGB8888)
 
 #define GET_RGB_PX(r, g, b) ((0xff000000) | (r << 16) | (g << 8) | (b))
 
@@ -31,13 +38,6 @@ inline pixel_t GET_FROM_RGB888(unsigned c) {
 }
 
 inline void GET_RGB(pixel_t c, uint8_t &r, uint8_t &g, uint8_t &b) {
-  r = (c & 0xff0000) >> 16;
-  g = (c & 0xff00) >> 8;
-  b = (c & 0xff);
-}
-
-inline void GET_ARGB(pixel_t c, uint8_t &a, uint8_t &r, uint8_t &g, uint8_t &b) {
-  a = (c & 0xff000000) >> 24;
   r = (c & 0xff0000) >> 16;
   g = (c & 0xff00) >> 8;
   b = (c & 0xff);
@@ -64,20 +64,11 @@ inline void SET_IMAGE_ARGB(uint8_t *image, unsigned offs, uint8_t a, uint8_t r, 
 // G = byte 1
 // R = byte 0
 
-#define GET_ARGB_PX(a, r, g, b) (a << 24 | (b << 16) | (g << 8) | (r))
-
 #define GET_RGB_PX(r, g, b) ((0xff000000) | (b << 16) | (g << 8) | (r))
 
 #define GET_FROM_RGB888(c) (c)
 
 inline void GET_RGB(pixel_t c, uint8_t &r, uint8_t &g, uint8_t &b) {
-  b = (c & 0xff0000) >> 16;
-  g = (c & 0xff00) >> 8;
-  r = (c & 0xff);
-}
-
-inline void GET_ARGB(pixel_t c, uint8_t &a, uint8_t &r, uint8_t &g, uint8_t &b) {
-  a = (c & 0xff000000) >> 24;
   b = (c & 0xff0000) >> 16;
   g = (c & 0xff00) >> 8;
   r = (c & 0xff);
