@@ -1,3 +1,6 @@
+2021-07-02 (12.22)
+	UI: Fix to make image save and load compatible
+
 2021-06-25 (12.22)
 	ANDROID: Unified file listing includes bas files from sub-folders
 
